fix spacing above example buttons

--- a/client/components/search/main.scss
+++ b/client/components/search/main.scss
@@ -6,7 +6,8 @@
     margin-top: 1em;
 
     .category-dropdowns {
-      margin-bottom: 1em;
+      margin-top: 1em;
+      margin-bottom: 0;
     }
 
     label {
